# bto-sbf-webscraper

./: .flake8  .gitignore  LICENSE  README.md  SBF_Nov 2020_5 Room_Kallang - Whampoa.csv  pyproject.toml
src/bto_sbf_webscraper/: console.py  scraper.py
tests/: test_console.py
