[tool.poetry]
name = "bto-sbf-webscraper"
version = "0.1.0"
description = "Tool to scrape HDB's BTO/SBF information"
authors = ["Terence Lim <me@terencelim.co>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/terencelimzhengwei/bto-sbf-webscraper"
repository = "https://github.com/terencelimzhengwei/bto-sbf-webscraper"
keywords = ["bto","sbf","hdb","singapore","sg"]


[tool.poetry.dependencies]
python = "^3.7.6"
bs4 = "^0.0.1"
webdriver-manager = "^3.2.2"
selenium = "^3.141.0"
pandas = "^1.2.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
black = "^20.8b1"
flake8-black = "^0.2.1"

[tool.poetry.scripts]
scrape-now = "bto_sbf_webscraper.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"